[gd_scene load_steps=34 format=3 uid="uid://b1a2s3d4f5g6h"]

[ext_resource type="Script" uid="uid://b2fd24g8c861e" path="res://enemy/aggressive_tribe/aggressive_tribe.gd" id="1_tribe_gd"]
[ext_resource type="PackedScene" uid="uid://ct1tqxgwkuvbe" path="res://scripts/hurt_area_2d.tscn" id="2_hurt_area"]
[ext_resource type="PackedScene" uid="uid://d1h2w3e4r5t6y" path="res://projectiles/coconut.tscn" id="2_o5hof"]
[ext_resource type="PackedScene" uid="uid://d2e3f4g5h6i7j" path="res://projectiles/slowing_coconut.tscn" id="3_aecud"]
[ext_resource type="Script" uid="uid://dpcf5xwvvbw55" path="res://enemy/aggressive_tribe/states/run.gd" id="3_run_state"]
[ext_resource type="Texture2D" uid="uid://b5gd3du4l8yd7" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/12-Hit/1.png" id="4_divti"]
[ext_resource type="Texture2D" uid="uid://be0sd1vgcgy4g" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/13-Dead Hit/1.png" id="4_fkllq"]
[ext_resource type="Texture2D" uid="uid://lrtt52fguxfv" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/1.png" id="4_run_1"]
[ext_resource type="Script" uid="uid://dqhrxd17cn0qw" path="res://enemy/aggressive_tribe/states/windup.gd" id="4_windup"]
[ext_resource type="Texture2D" uid="uid://b86ql86s6gx3c" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/12-Hit/2.png" id="5_0ng6r"]
[ext_resource type="Texture2D" uid="uid://co3ydhean6cji" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/13-Dead Hit/2.png" id="5_8f4c1"]
[ext_resource type="Script" uid="uid://f5yc4eeboe8t" path="res://enemy/aggressive_tribe/states/attack.gd" id="5_attack"]
[ext_resource type="Texture2D" uid="uid://cwswug1rr4a7s" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/2.png" id="5_run_2"]
[ext_resource type="Texture2D" uid="uid://yedcbgxgub6d" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/12-Hit/3.png" id="6_d2rkk"]
[ext_resource type="Texture2D" uid="uid://dh83j4tufc4ee" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/13-Dead Hit/3.png" id="6_rs4e5"]
[ext_resource type="Texture2D" uid="uid://etiegitqokmt" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/3.png" id="6_run_3"]
[ext_resource type="Texture2D" uid="uid://crbuyhw7ul5cu" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/12-Hit/4.png" id="7_fkllq"]
[ext_resource type="Texture2D" uid="uid://ctu8fjuvan4nu" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/4.png" id="7_run_4"]
[ext_resource type="Texture2D" uid="uid://dswx6yxguqwrk" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/12-Hit/5.png" id="8_8f4c1"]
[ext_resource type="Texture2D" uid="uid://dtmlqclnvle2m" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/5.png" id="8_run_5"]
[ext_resource type="Texture2D" uid="uid://3cohpwgofimt" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/6.png" id="9_run_6"]
[ext_resource type="Texture2D" uid="uid://1h70v7lq8t38" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/7.png" id="10_run_7"]
[ext_resource type="Texture2D" uid="uid://p55ub5q4e4vb" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/8.png" id="11_run_8"]
[ext_resource type="Texture2D" uid="uid://c4npxjigd5nl5" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/9.png" id="12_run_9"]
[ext_resource type="Texture2D" uid="uid://d3gyj1to0gpg2" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/10.png" id="13_run_10"]
[ext_resource type="Texture2D" uid="uid://cma6x3l2cb2wd" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/11.png" id="14_run_11"]
[ext_resource type="Texture2D" uid="uid://cm4namhqyxhj3" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/12.png" id="15_run_12"]
[ext_resource type="Texture2D" uid="uid://vidwepsj4vpt" path="res://assets/monsters/tribe_temporary/Sprites/4-Enemy-Big Guy/2-Run/13.png" id="16_run_13"]
[ext_resource type="Script" uid="uid://d5i3ol6vyi0b" path="res://enemy/aggressive_tribe/states/hurt.gd" id="17_73cdu"]
[ext_resource type="Script" uid="uid://b7ewwnsf37mqg" path="res://enemy/aggressive_tribe/dead.gd" id="20_aecud"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 29.0

[sub_resource type="SpriteFrames" id="SpriteFrames_tribe_run"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fkllq")
}, {
"duration": 1.0,
"texture": ExtResource("5_8f4c1")
}, {
"duration": 1.0,
"texture": ExtResource("6_rs4e5")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_divti")
}, {
"duration": 1.0,
"texture": ExtResource("5_0ng6r")
}, {
"duration": 1.0,
"texture": ExtResource("6_d2rkk")
}, {
"duration": 1.0,
"texture": ExtResource("7_fkllq")
}, {
"duration": 1.0,
"texture": ExtResource("8_8f4c1")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_run_1")
}, {
"duration": 1.0,
"texture": ExtResource("5_run_2")
}, {
"duration": 1.0,
"texture": ExtResource("6_run_3")
}, {
"duration": 1.0,
"texture": ExtResource("7_run_4")
}, {
"duration": 1.0,
"texture": ExtResource("8_run_5")
}, {
"duration": 1.0,
"texture": ExtResource("9_run_6")
}, {
"duration": 1.0,
"texture": ExtResource("10_run_7")
}, {
"duration": 1.0,
"texture": ExtResource("11_run_8")
}, {
"duration": 1.0,
"texture": ExtResource("12_run_9")
}, {
"duration": 1.0,
"texture": ExtResource("13_run_10")
}, {
"duration": 1.0,
"texture": ExtResource("14_run_11")
}, {
"duration": 1.0,
"texture": ExtResource("15_run_12")
}, {
"duration": 1.0,
"texture": ExtResource("16_run_13")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e5pm8"]
radius = 32.0

[node name="AggressiveTribe" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_tribe_gd")
windup_time = 1.0
normal_coconut_scene = ExtResource("2_o5hof")
special_coconut_scene = ExtResource("3_aecud")
movement_speed = 100.0
metadata/_custom_type_script = "uid://s4xx82espxdt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
sprite_frames = SubResource("SpriteFrames_tribe_run")
animation = &"hurt"

[node name="FrontRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(15, 16)
target_position = Vector2(30, 0)

[node name="DownRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(15, 0)
target_position = Vector2(0, 40)

[node name="ThrowOrigin" type="Marker2D" parent="Direction"]
position = Vector2(30, -20)

[node name="DetectPlayerRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(0, 16)
target_position = Vector2(300, 0)
collision_mask = 2

[node name="HurtArea2D" parent="Direction" instance=ExtResource("2_hurt_area")]
position = Vector2(0, 3)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
shape = SubResource("CircleShape2D_e5pm8")

[node name="ThrowTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WindupTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="States" type="Node" parent="."]

[node name="Run" type="Node" parent="States"]
script = ExtResource("3_run_state")

[node name="Windup" type="Node" parent="States"]
script = ExtResource("4_windup")

[node name="Attack" type="Node" parent="States"]
script = ExtResource("5_attack")

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("17_73cdu")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("20_aecud")
